--- a/195_Mnist_LeNet.ipynb
+++ b/195_Mnist_LeNet.ipynb
@@ -227,8 +227,10 @@
    },
    "outputs": [],
    "source": [
-    "train_ds = tf.data.Dataset.from_tensor_slices((X_train_scaled, y_train_onehot)).shuffle(10000).batch(128)\n",
-    "test_ds  = tf.data.Dataset.from_tensor_slices((X_test_scaled, y_test_onehot)).batch(128)"
+    "train_ds = tf.data.Dataset.from_tensor_slices((\n",
+    "    X_train_scaled, y_train_onehot)).shuffle(10000).batch(128)\n",
+    "test_ds  = tf.data.Dataset.from_tensor_slices((\n",
+    "    X_test_scaled, y_test_onehot)).batch(128)"
    ]
   },
   {
@@ -255,7 +257,8 @@
    "source": [
     "# LeNet\n",
     "model = tf.keras.Sequential([\n",
-    "    Conv2D(6, kernel_size=5, padding=\"same\", input_shape=(28, 28, 1), activation='relu'),\n",
+    "    Conv2D(6, kernel_size=5, padding=\"same\", \n",
+    "           input_shape=(28, 28, 1), activation='relu'),\n",
     "    MaxPooling2D(pool_size=(2, 2), strides=(2, 2)),\n",
     "    Conv2D(16, kernel_size=5, padding=\"valid\", activation='relu'),\n",
     "    MaxPooling2D(pool_size=(2, 2), strides=(2, 2)),\n",
@@ -327,7 +330,8 @@
    },
    "outputs": [],
    "source": [
-    "model.compile(loss=\"categorical_crossentropy\", optimizer='adam', metrics=['accuracy'])"
+    "model.compile(loss=\"categorical_crossentropy\", \n",
+    "              optimizer='adam', metrics=['accuracy'])"
    ]
   },
   {
@@ -762,7 +766,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
