--- a/001_Crash1_Numpy.ipynb
+++ b/001_Crash1_Numpy.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1. Numpy and Linear Algebra (선형대수)\n",
+    "# 1. Numpy \n",
     "\n",
     "- 수치 data 를 다루는데 효율적이고 높은 성능 제공\n",
     "\n",
@@ -372,9 +372,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
